--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="stylesheet" href="TestResults.css" />
+    <link rel="stylesheet" href="index.css" />
     <script type="text/javascript" src="data.json"></script>
     <title>Test Report</title>
     <script
